--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My first Bitstarter</title>
+    <title>Netkit in startup engineering</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -132,19 +132,23 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>Netkit-SE</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">Netkit in Startup Engineering.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
+	  <!--
           <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <iframe width="480" height="300" src="//www.youtube.com/embed/kqDkkFBwzlw" frameborder="0" allowfullscreen></iframe>
+	  -->
+	  <iframe width="480" height="300" src="//www.youtube.com/embed/kqDkkFBwzlw" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -161,12 +165,12 @@
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$6000</h3> <p>of $10,000</p>
+                  <h3>$6000</h3> <p>of $12,500</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-r">
-                <h3>10</h3> <p>days left</p>
+                <h3>45</h3> <p>days left</p>
                 </div>
               </div>
             </div>
@@ -175,8 +179,8 @@
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
             <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 60%;"></div>
-              <div class="bar bar-warning" style="width: 40%;"></div>
+              <div class="bar bar-success" style="width: 05%;"></div>
+              <div class="bar bar-warning" style="width: 95%;"></div>
             </div>
           </div>
           <div class="span6 offset3 order">
@@ -199,21 +203,17 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
+	  <!--
           <img class="img-polaroid" src="http://placehold.it/480x300">
+	  -->
+	  <img class="img-polaroid" src="http://farm6.staticflickr.com/5109/5629251918_1024bde2cf.jpg">
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+            The standard Netkit distribution 
+	    <a href="http://wiki.netkit.org/index.php/Main_Page">Netkit wiki</a>
+	    shows many interesting features but it lacks of a modern
+	    filesystem. We propose to move it into a recent Debian "stable" release.
           </p>
         </div>
       </div>
@@ -221,21 +221,21 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+	    Netkit is a lightweight network emulator based on open source software. It offers an easy-to-use interface
+	    to set up emulated network experiences (labs) with little effort, thus enabling users to experiment with
+	    several networking technologies at low cost, with no impact on operational networks, and without the hassle
+	    of dealing with tricky emulation parameters instead of configuring the network itself.
+	    Netkit also provides users with tools to support sharing preconfigured virtual labs with others, in such a
+	    way that "replaying" a lab is as simple as typing a single command.
+	    Netkit is also accompanied by a corpus of ready-to-use labs and lecture slides that can be used to learn,
+	    teach, or experiment with different networking topics.
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <!--
+	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  -->
+	  <img class="img-polaroid" src="http://tocai.dia.uniroma3.it/~netkit/contrib/LATEST/logoDVD.jpg">
         </div>
       </div>
 
@@ -268,7 +268,8 @@
                 </div>
                 <div id="collapseTwo" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    A question which is commonly asked by users.
+                    Frequently asked questions are listed questions and answers,
+		    all supposed to be commonly asked in some context, and pertaining to a particular topic.
                   </div>
                 </div>
               </div>
