Edited product desc in index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Bitstarter</a>
+          <a class="brand" href="#">Netkit-SE</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -213,8 +213,14 @@
             The standard Netkit distribution 
 	    <a href="http://wiki.netkit.org/index.php/Main_Page">Netkit wiki</a>
 	    shows many interesting features but it lacks of a modern
-	    filesystem. We propose to move it into a recent Debian "stable" release.
+	    filesystem. We propose to move it into a recent Debian "stable" release and more features
+	    such as, for example, AutoNetkit and OpenWrt filesystem.
           </p>
+
+	  <p>
+	    The real project will be launched in Q3 2013. For now we are following the "Startup Engineering" class.
+	  </p>
+
         </div>
       </div>
 
