--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
           rel="stylesheet" type="text/css">
     <style type="text/css">
+
       /* Large desktop */
       @media (min-width: 980px) { 
         body {
@@ -132,7 +133,7 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Netkit-SE</h1>
+          <h1>Netkit-SE: Development Version</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
@@ -145,7 +146,7 @@
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
 	  <!--
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300">
 	  <iframe width="480" height="300" src="//www.youtube.com/embed/kqDkkFBwzlw" frameborder="0" allowfullscreen></iframe>
 	  -->
 	  <iframe width="480" height="300" src="//www.youtube.com/embed/kqDkkFBwzlw" frameborder="0" allowfullscreen></iframe>
@@ -153,8 +154,9 @@
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
         <div class="span5 actions">
+          <div class="row-fluid">
           <div class="span8 offset2">
-            <div class="statistics">
+            <div class="row-fluid statistics">
               <div class="span4">
                 <!-- linediv-l and linediv-r give dividing lines that look
                 different in horizontal and vertical layouts, illustrating
@@ -170,30 +172,37 @@
               </div>
               <div class="span4">
                 <div class="linediv-r">
-                <h3>45</h3> <p>days left</p>
+                <h3>100</h3> <p>days left</p>
                 </div>
               </div>
             </div>
           </div>
+          <div class="row-fluid">
           <div class="span10 offset1">
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
             <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 05%;"></div>
-              <div class="bar bar-warning" style="width: 95%;"></div>
+              <div class="bar bar-success" style="width: 01%;"></div>
+              <div class="bar bar-warning" style="width: 99%;"></div>
             </div>
           </div>
+          </div>
+          <div class="row-fluid">
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
             <button class="btn btn-success btn-large">Preorder</button>
           </div>
+          </div>
+          <div class="row-fluid">
           <div class="span8 offset2 social">
             <!-- Social buttons are not included in default Bootstrap. -->
             <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
             <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
             <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
           </div>
+          </div>
+        </div>
         </div>
       </div>
 
@@ -204,18 +213,18 @@
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
 	  <!--
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid"  alt="Placeholder" src="http://placehold.it/480x300">
 	  -->
 	  <img class="img-polaroid" src="http://farm6.staticflickr.com/5109/5629251918_1024bde2cf.jpg">
         </div>
         <div class="span5 copy">
           <p>
-            The standard Netkit distribution 
+	    The standard Netkit distribution
 	    <a href="http://wiki.netkit.org/index.php/Main_Page">Netkit wiki</a>
 	    shows many interesting features but it lacks of a modern
 	    filesystem. We propose to move it into a recent Debian "stable" release and more features
 	    such as, for example, AutoNetkit and OpenWrt filesystem.
-          </p>
+	  </p>
 
 	  <p>
 	    The real project will be launched in Q3 2013. For now we are following the "Startup Engineering" class.
@@ -238,8 +247,8 @@
           </p>
         </div>
         <div class="span5 asset">
-          <!--
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <!--
+          <img class="img-polaroid"  alt="Placeholder" src="http://placehold.it/480x300">
 	  -->
 	  <img class="img-polaroid" src="http://tocai.dia.uniroma3.it/~netkit/contrib/LATEST/logoDVD.jpg">
         </div>
