--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-43050608-1']);
+      _gaq.push(['_setAccount', 'UA-43050608-2']);
       _gaq.push(['_trackPageview']);
 
       (function() {
@@ -151,7 +151,7 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Netkit-SE: Staging Version</h1>
+          <h1>Netkit-SE: Production Version</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
