Add Payments with Coinbase in index.html

--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <!-- <button class="btn btn-success btn-large">Preorder</button> -->
+	    <a class="coinbase-button" data-code="d349b068f6a1ec721095059fec80dc5d" href="https://coinbase.com/checkouts/d349b068f6a1ec721095059fec80dc5d">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           </div>
           <div class="row-fluid">
