Fixed launch time and title

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Netkit-SE: Production Version</h1>
+          <h1>Netkit-SE: Staging Version</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
