--- a/index.html
+++ b/index.html
@@ -102,6 +102,23 @@
         width:180px;
         margin: 0 auto;
       }
+      /*Video syle*/
+      .flex-video {
+        position: relative;
+        padding-top: 25px;
+        padding-bottom: 67.5%;
+        height: 0;
+        margin-bottom: 16px;
+        overflow: hidden;
+      }
+      .flex-video.widescreen { padding-bottom: 57.25%; }
+      .flex-video iframe, .flex-video object, .flex-video embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
     </style>
     <script type="text/javascript">
 
@@ -166,8 +183,9 @@
 	  <!--
           <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300">
 	  <iframe width="480" height="300" src="//www.youtube.com/embed/kqDkkFBwzlw" frameborder="0" allowfullscreen></iframe>
-	  -->
 	  <iframe width="480" height="300" src="//www.youtube.com/embed/kqDkkFBwzlw" frameborder="0" allowfullscreen></iframe>
+	  -->
+	  <div class="flex-video widescreen"><iframe src="https://www.youtube-nocookie.com/embed/kqDkkFBwzlw" frameborder="0" allowfullscreen=""></iframe></div>
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
