--- a/index.html
+++ b/index.html
@@ -227,8 +227,7 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <!-- <button class="btn btn-success btn-large">Preorder</button> -->
-	    <a class="coinbase-button" data-code="d349b068f6a1ec721095059fec80dc5d" href="https://coinbase.com/checkouts/d349b068f6a1ec721095059fec80dc5d">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+            <!-- <button class="btn btn-success btn-large">Preorder</button> -->            <a class="coinbase-button" data-code="462d863403eb74fa0c01419353d4d670" data-button-style="custom_large" href="https://coinbase.com/checkouts/462d863403eb74fa0c01419353d4d670">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           </div>
           <div class="row-fluid">
